JS Task 3 with Jquery data table
Added Datatable in Jquery and Also perform Deletiona and Updation on the table

--- a/JS_Task 3/Index.html
+++ b/JS_Task 3/Index.html
@@ -137,7 +137,7 @@
                 Add Details
             </button>
         </div>
-        <table id="userDetails" class="table table-hover">
+        <table id="userDetails" class="table table-striped cell-border">
             <thead>
                 <tr>
                     <th>First Name</th>
@@ -150,8 +150,6 @@
                 </tr>
             </thead>
                 <tbody id="tbody">
-                    
-
                 </tbody>
         </table>
     </div>
