--- a/JS_Task 3/Index.html
+++ b/JS_Task 3/Index.html
@@ -66,6 +66,7 @@
                                 <label for="address" class="form-label">Address</label>
                                 <input type="text" class="form-control" id="address" aria-describedby="emailHelp"
                                     placeholder="Mhesana,Gujarat">
+                                <!-- <textarea name="" id="address" cols="30" rows="2"></textarea> -->
                                 <p id="address-err" style="color: red;"></p>
                             </div>
                             <div class="mb-3 col col-xl-4col-12  px-lg-5 p-0">
@@ -79,12 +80,12 @@
                             </div>
                         </form>
 
-                        <!-- <div class="container-fluid d-flex justify-content-between px-5">
+                        <div class="container-fluid d-flex justify-content-between px-5">
                             <h2 class="">Education</h2>
                             <i class="fa fa-plus-circle h4" onclick="insertRow()"></i>
-                          </div> -->
+                          </div>
                         
-                          <!-- <div class="container-fluid px-5 table-responsive">
+                          <div class="container-fluid px-5 table-responsive">
                             <table class="table" id="myTable">
                               <thead>
                                 <tr>
@@ -119,7 +120,7 @@
                               </tbody>
                             </table>
                         
-                          </div> -->
+                          </div>
 
                     </div>
                 </div>
@@ -133,7 +134,7 @@
     <div class="container-fluid px-5 table-responsive">
         <div class="d-flex justify-content-between px-5 py-4">
             <h2>User Details</h2>
-            <button type="button" id="add-btn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
+            <button type="button" id="add-btn" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#myModal">
                 Add Details
             </button>
         </div>
@@ -148,7 +149,7 @@
                     <th>Graduation Year</th>
                     <th>Actions</th>
                 </tr>
-            </thead>
+            </thead>    
                 <tbody id="tbody">
                 </tbody>
         </table>
